<resources>
    <string name="app_name">CobMaestros</string>
    <string name="action_logout">Log Out</string>
    <string name="action_sign_in">Sign in or Register</string>
    <string name="action_sign_in_short">Sign In</string>
    <string name="btn_link_to_login">Registred Succesfully! Log In Now.</string>
    <string name="btn_link_to_register">Not a member? Sign up now</string>
    <string name="btn_login">Login</string>
    <string name="btn_register">Register</string>
    <string name="btnActualizarUsuario">Update My Info</string>
    <string name="btnEditarUsuario">Edit My Info</string>
    <string name="by">Develop and Designed by</string>
    <string name="hint_confPassword">Confirm Your Password</string>
    <string name="hint_email">Write your Email</string>
    <string name="hint_apellidos">Write Your Last Names</string>
    <string name="hint_nombres">Write Your Name(s)</string>
    <string name="hint_password">Write Your Password</string>
    <string name="hint_telefono">Write Your Cellphone Number</string>
    <string name="hint_update_email">Change Email Address</string>
    <string name="hint_update_apellidos">Change Last Name</string>
    <string name="hint_update_name">Change Name</string>
    <string name="hint_update_passwd">Change Password</string>
    <string name="hint_update_phone">Change Cellphone Number</string>
    <string name="login_failed">Login Failed</string>
    <string name="menu_about">About..</string>
    <string name="menu_home">Home</string>
    <string name="menu_user_data">My Info</string>
    <string name="fg_update_user">Update My Info</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="programmer_name" translatable="false">Axel Abraham Maldonado Enriquez</string>
    <string name="menu_alumnos">Students List</string>
    <string name="menu_activities">Submit Score</string>
    <string name="menu_asistencias">Attendance</string>
    <string name="menu_escala">Scale</string>
    <string name="menu_avisos">Notices</string>
    <string name="add_description">Add your notice here</string>
    <string name="add_aviso">Add Notice</string>
    <string name="tv_escala_1">First Partial</string>
    <string name="tv_escala_2">Second Partial</string>
    <string name="tv_escala_3">Third Partial</string>
    <string name="btn_nv_aviso">Add Notice</string>
    <string name="btn_ed_aviso">Edit Notice</string>
    <string name="btn_rv_notice">Remove Notice</string>
    <string name="hint_add_titulo">Write your title</string>
    <string name="hint_descripcion">Write the Info</string>
    <string name="hint_add_fecha">Write new date</string>
    <string name="btn_add_fecha">Add Date</string>
    <string name="hint_materia">Write your Course</string>
    <string name="hint_update_materia">Change Course</string>
    <string name="hint_aspecto">Activity</string>
    <string name="hint_porcentaje">Percentage</string>
    <string name="hint_parcial">Partial</string>
    <string name="btn_nv_aspecto">Add Activity</string>
    <string name="btn_ed_aspecto">Edit Activity</string>
    <string name="btn_rm_aspecto">Remove Activity</string>
    <string name="frg_detalles_padre">Info Parent\'s Student</string>
    <string name="hint_edit_fecha">N° Date to Update</string>
    <string name="btn_edit_fecha">Update Date</string>
    <string name="btn_update_fecha">Update Date</string>
    <string name="btn_delete_fecha">Delete Date</string>
    <string name="frg_asis_alumno">Student Attendance</string>
    <string name="tv_nombre_asistencia">Student\'s Name</string>
    <string name="btn_asistencia">Here</string>
    <string name="btn_ausente">Abscent</string>
    <string name="tv_cargar_calif">Upload Student\'s Score</string>
    <string name="hint_aspecto_cargar">Write the value</string>
    <string name="btn_add_value">Add Value</string>
    <string name="btn_update_value">Update Value</string>
    <string name="frg_cargar_calif">Load Student\'s Score</string>
</resources>