<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home"/>

        <item
            android:id="@+id/nav_list_alum"
            android:icon="@drawable/ic_list_alum"
            android:title="@string/menu_alumnos"/>

        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_activities"
            android:title="@string/menu_activities"/>

        <item
            android:id="@+id/nav_asistencia"
            android:icon="@drawable/ic_asistencias"
            android:title="@string/menu_asistencias"/>

        <item
            android:id="@+id/nav_scale"
            android:icon="@drawable/ic_scale"
            android:title="@string/menu_escala"/>

        <item
            android:id="@+id/nav_avisos"
            android:icon="@drawable/ic_avisos"
            android:title="@string/menu_avisos"/>

        <item
            android:id="@+id/nav_data_user"
            android:icon="@drawable/ic_user_data"
            android:title="@string/menu_user_data"/>

        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/menu_about"/>

    </group>

</menu>