<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#A5D6A7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:padding="8dp"
        android:text="No es necesario volver a reescribir tus datos, solo llena los campos a corregir."
        android:textColor="@color/input_register"
        android:textAlignment="center"
        android:textSize="20sp"
        android:fontFamily="sans-serif-medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.075"/>

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_name"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.215"/>

    <EditText
        android:id="@+id/etApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_apellidos"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etNombre"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etMateria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_materia"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etApellido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etTelefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_phone"
        android:padding="8dp"
        android:inputType="phone"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etMateria"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_email"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etTelefono"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etContraseña"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_update_passwd"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etConfirmCont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_confPassword"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toBottomOf="@+id/etContraseña"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnUpdateUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15sp"
        android:background="@drawable/button_rounded"
        android:padding="8dp"
        android:text="@string/btnActualizarUsuario"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.925"/>

</androidx.constraintlayout.widget.ConstraintLayout>