<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">

    <EditText
        android:id="@+id/et_nombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="460dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_nombres"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_apellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="350dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_apellidos"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_materia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_materia"
        android:padding="8dp"
        android:inputType="textCapWords"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="130dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_telefono"
        android:padding="8dp"
        android:inputType="text|phone"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_email"
        android:padding="8dp"
        android:inputType="textEmailAddress"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_password"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/text_light"
        android:hint="@string/hint_confPassword"
        android:padding="8dp"
        android:inputType="textPassword"
        android:textColor="@color/input_register"
        android:textColorHint="@color/input_register_hint"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Boton Para Registrar en la base de datos -->
    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="310dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@drawable/button_rounded"
        android:text="@string/btn_register"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <!-- Boton para ir al activity login -->
    <Button
        android:id="@+id/btnToLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="420dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"
        android:background="@android:color/transparent"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>