<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="#A5D6A7"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ListView
        android:id="@+id/list_alumnos"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/round_list"
        android:layout_margin="10dp"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/Alum_Nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18dp"
            android:text="@string/tv_nombre_asistencia"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <Button
            android:id="@+id/btn_add_asist"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded"
            android:layout_marginTop="10dp"
            android:drawableEnd="@drawable/ic_positive"
            android:text="@string/btn_asistencia"
            android:textAllCaps="false"
            app:layout_constraintTop_toBottomOf="@+id/Alum_Nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.2"/>

        <Button
            android:id="@+id/btn_add_ausente"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:background="@drawable/button_rounded"
            android:drawableEnd="@drawable/ic_negative"
            android:text="@string/btn_ausente"
            android:textAllCaps="false"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/Alum_Nombre"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/list_asis_alumno"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/round_list"
        android:layout_margin="10dp"/>

</LinearLayout>